# MaiDiary

./: .gitignore  Dockerfile  README.md  coverage.txt  coverage_report.txt  diary_log.txt  maidiary.py  prova.py  pyproject.toml  ratings_log.txt  requirements.txt  requitements.txt  supervisord.conf
.github/workflows/: main.yml  python-app.yml
diary_logs/: 19-06-2024, 01-38-27.txt  19-06-2024, 01-38-36.txt  19-06-2024, 13-18-34.txt  19-06-2024, 13-26-17.txt  19-06-2024, 14-39-37.txt  19-06-2024, 14-45-40.txt  19-06-2024_00-07-26.txt  20-06-2024, 13-48-05.txt  20-06-2024, 13-49-59.txt  20-06-2024, 13-53-12.txt  20-06-2024, 20-03-35.txt  2024-06-07_15-36-07.txt  2024-06-07_15-36-10.txt  2024-06-07_15-43-30.txt  2024-06-07_15-43-36.txt  2024-06-07_15-44-27.txt  2024-06-07_15-45-42.txt  2024-06-18_17-43-01.txt  2024-06-18_18-39-03.txt  2024-06-18_19-21-14.txt
maidiary/: maidiary.py
maidiary/tests/: test_integration.py  test_property.py  test_unit.py
src/: maidiary.py
tests/: test_calculate_quality.py  test_integration.py  test_load_logs.py  test_main.py  test_show_diary_page.py  test_unit.py  test_unit_1.py  test_unity.py
tests/test_integration/: test_save_and_delete_log.py  test_save_and_load_log.py  test_save_and_load_mult_logs.py  test_save_and_refresh_logs.py  test_start_application.py
tests/test_property/: test_calculaty_quality_prop.py  test_encript_decript_prop.py  test_property.py
tests/test_unity/: test_calculate_quality.py  test_delete_log.py  test_encript_decript.py  test_load_logs.py  test_main.py  test_refresh_logs.py  test_save_log.py  test_show_diary_page.py
