[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[options]
packages = ["maidiary"]
package_dir = ""

[info]
name = "MaiDiary"
version = "1.0"
author = "Peppe Blunda"

[dependencies]
python_version = ">=3.10.12"
tkinter = ">=8.6"
customtkinter = ">=5.2.2"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.packages.find]
exclude = ["users"]


[project]
name = "MaiDiary"
version = "1.0"
dependencies = []
requires-python = ">=3.10.12"
authors = [
  {name = "Giuseppe Blunda", email = "giuseppe.blunda@edu.unife.it"}
]
maintainers = [
  {name = "Giuseppe Blunda", email = "giuseppe.blunda@edu.unife.it"}
]
description = "MaiDiary è un'applicazione desktop per la gestione di un diario personale."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["diario", "applicazione", "desktop", "python", "tkinter", "pagine"]

[usage]
# Esegui il programma con il seguente comando:
# python maidiary.py

[contributing]
# Senti libero di contribuire con suggerimenti, segnalazioni di bug o nuove funzionalità.
# Crea una pull request direttamente su GitHub.

[license]
# Questo progetto è concesso in licenza secondo i termini della Licenza MIT - vedere il file LICENSE.md per i dettagli.
